# Prrogramare-Orientata-Obiect

angajat/: Angajat.cpp  Angajat.h  CMakeLists.txt  main.cpp
autovehicule/: Autoturism.cpp  Autoturism.h  Autovehicul.cpp  Autovehicul.h  CMakeLists.txt  TransportPersoane.cpp  TransportPersoane.h  laborator_10_POO_2023.docx  main.cpp
laborator1/: CMakeLists.txt  Curs.cpp  Curs.h  Student.cpp  Student.h  laborator_1_POO_2023.docx  main.cpp
laborator2/: Angajat.cpp  Angajat.h  CMakeLists.txt  Complex.cpp  Complex.h  Punct.cpp  Punct.h  laborator_2_POO_2023.docx  main.cpp
laborator3/: Automobil.cpp  Automobil.h  CMakeLists.txt  main.cpp
laborator4/: CMakeLists.txt  main.cpp
puncte/: CMakeLists.txt  main.cpp
tema8/: CMakeLists.txt  Cosmetic.cpp  Cosmetic.h  Drink.cpp  Drink.h  Grocery.h  Product.cpp  Supermarket.cpp  Supermarket.h  main.cpp
tema8/cosmetic/: Cosmetic.cpp  Cosmetic.h
tema8/drink/: Drink.cpp  Drink.h
tema8/grocery/: Grocery.cpp  Grocery.h
tema8/product/: Product.cpp  Product.h
tema8/supermarket/: Supermarket.cpp  Supermarket.h
